# ruspiro-singleton

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
src/: lazy.rs  lib.rs
