[package]
name = "ruspiro-singleton"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = "Simple and easy to use singleton pattern"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-singleton/tree/v0.3.1"
documentation = "https://docs.rs/ruspiro-singleton/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "singleton", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-singleton", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-lock = "0.3"

[features]

[patch.crates-io]
ruspiro-lock = { git = "https://github.com/RusPiRo/ruspiro-lock.git" }