[package]
name = "ruspiro-singleton"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.0" # remember to update html_root_url
description = "Simple and easy to use singleton pattern"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-singleton/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-singleton/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "singleton", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-singleton", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dev-dependencies]

[dependencies]
ruspiro-lock = "0.4.0"

[features]
ruspiro_pi3 = [ ]

[patch.crates-io]
ruspiro-lock = { git = "https://github.com/RusPiRo/ruspiro-lock.git" }
