[package]
name = "ruspiro-singleton"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.2" # remember to update html_root_url
description = "Simple and easy to use singleton pattern"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-singleton/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-singleton/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "singleton", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dev-dependencies]

[dependencies]
ruspiro-lock = "~0.4.2"

[features]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = [ ]

[patch.crates-io]
ruspiro-lock = { git = "https://github.com/RusPiRo/ruspiro-lock.git", branch = "development" }
